testsuite/tests/deSugar/should_fail/T21701.hs
{-# LANGUAGE NoNegativeLiterals #-}
module Foo where
import Data.Int
x :: Int8
x = (-128)

